--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CRUD exercise DevOps asigment",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "author": "",
@@ -15,6 +15,8 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "jest": "^27.2.4",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.6"
   }
 }
