--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "rotating-file-stream": "^2.1.6",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "jest": "^27.2.4",
