--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.2",
     "rotating-file-stream": "^2.1.6",
-    "winston": "^3.3.3"
+    "sequelize": "^6.8.0",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "jest": "^27.2.4",
