--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "rotating-file-stream": "^2.1.6",
     "sequelize": "^6.8.0",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5"
+    "winston-daily-rotate-file": "^4.5.5",
+    "sequelize-mock": "^0.10.2"
   },
   "devDependencies": {
     "jest": "^27.2.4",
