--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-PORT="YOURPORT"
-DB_NAME="YOURDBNAME"
-DB_HOST="YOURDBHOST"
-DB_PASS="YOURDPASTWORD"
-DB_USER="YOURDBUSER"
-DB_PORT="YOURDBPORT"
+PORT="3000"
+DB_NAME="HospitalManager"
+DB_PASS="default"
+DB_USER="root"
